--- a/style/style.sass
+++ b/style/style.sass
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap')
 @import "mixins.sass"
 
+$green: #16c2a3
+$gray: #4b4b4d
+$gradient: linear-gradient(to right, #04c2a8 0%, #fec667 100%)
+
 body
-    font-family: "Open Sans", sans-serif
-    font-size: 15px
-    line-height: 27px
-    color: #616161
+    font-family: 'Roboto', sans-serif
+    font-size: 16px
+    color: #4b4b4d
 
 img
     max-width: 100%
@@ -12,7 +16,134 @@ img
     object-fit: cover
     object-position: center
 
-.container
-    max-width: 1200px
-    margin: 0 auto
-    padding: 0 15px
+//HEADER>>>
+
+.header
+    height: 800px
+    background: url("../images/intro.jpg") center / cover fixed no-repeat
+    color: #fff
+    padding-top: 5px
+    &-nav
+        &__logo
+            margin-bottom: 15px
+        &__links
+            display: flex
+            flex-direction: row
+            justify-content: space-between
+            align-items: center
+        &__link
+            font-weight: 500
+        &__menu
+            height: 30px
+            width: 30px
+            position: relative
+            display: none
+            cursor: pointer
+            &::before
+                @include pseudo()
+            &::after
+                @include pseudo()
+            span, &::before, &::after
+                height: 4px
+                width: 100%
+                position: absolute
+                left: 0
+                background-color: white
+            span
+                top: 50%
+                transform: translateY(-50%)
+            &::before
+                top: 0
+                border-radius: 5px 5px 0 0
+            &::after
+                bottom: 0
+                border-radius: 0 0 5px 5px
+    &-content
+        margin-top: calc(130px + (100vw / 1170))
+        h1
+            font-size: 45px
+            font-weight: 500
+        p
+            margin: 30px 0 40px 0
+            padding-right: 3vw
+        button
+            background-color: $green
+            padding: 15px 35px
+            border-radius: 28px
+            font-size: 15px
+
+//ABOUT>>>
+
+.about
+    padding: 120px 0
+    &__pic
+        padding-bottom: 20px
+        min-width: 250px
+    &__content
+        h2
+            font-size: 35px
+            font-weight: 700
+        p
+            margin: 20px 0 40px 0
+        button
+            background-color: $gray
+            padding: 15px 35px
+            border-radius: 28px
+            font-size: 15px
+            color: #fff
+
+//SERVICE>>>
+
+.service
+    padding-top: 3vw
+    text-align: center
+    &-intro
+        width: 65%
+        p
+            margin: 10px 0 80px 0
+    &-main
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        flex-wrap: wrap
+        &__item
+            flex: 0 0 31.5%
+            margin-bottom: 50px
+            border: 2px solid
+            border-image: $gradient
+            border-image-slice: 1
+            position: relative
+            padding: 45px 20px 0 20px
+            h4
+                margin: 25px 0
+                font-size: 18px
+                font-weight: 500
+            p
+                margin-bottom: 50px
+            &_active
+                background: url("../images/service4.jpg") center / cover no-repeat
+                color: #fff
+                padding: 65px 18px 90px
+                border: none
+                h4
+                    font-size: 30px
+                    font-weight: 500
+                    margin-bottom: 12px
+                p
+                    margin-bottom: 24px
+                input
+                    padding: 18px 0 18px 24px
+                    border-radius: 30px
+                    background-color: #fafafa
+                    width: 100%
+            button
+                position: absolute
+                bottom: -27px
+                left: 50%
+                transform: translateX(-50%)
+                z-index: 1
+                background-color: $gray
+                padding: 15px 35px
+                border-radius: 28px
+                font-size: 15px
+                color: #fff
