--- a/style/style.sass
+++ b/style/style.sass
@@ -95,7 +95,7 @@ img
 //SERVICE>>>
 
 .service
-    padding-top: 3vw
+    padding: 3vw 0
     text-align: center
     &-intro
         width: 65%
@@ -131,11 +131,22 @@ img
                     margin-bottom: 12px
                 p
                     margin-bottom: 24px
+                .input-wrapper
+                    position: relative
                 input
                     padding: 18px 0 18px 24px
                     border-radius: 30px
                     background-color: #fafafa
                     width: 100%
+                    color: $gray
+                a
+                    position: absolute
+                    color: $gray
+                    font-weight: 700
+                    font-size: 18px
+                    top: 50%
+                    transform: translateY(-50%)
+                    right: 20px
             button
                 position: absolute
                 bottom: -27px
@@ -147,3 +158,158 @@ img
                 border-radius: 28px
                 font-size: 15px
                 color: #fff
+
+//INTEGRATION>>>
+
+.integration
+    background-color: #fcfcfe
+    padding: 80px 0
+    &-main
+        h4
+            font-size: 12px
+            margin-bottom: 15px
+            font-weight: normal
+        h2
+            font-size: 30px
+            font-weight: 700
+        p
+            margin: 25px 0 30px 0
+        button
+            background-color: $green
+            padding: 10px 30px
+            border-radius: 28px
+            font-size: 12px
+            color: #fff
+            margin: 0 1vw 10px 0
+            &:last-child
+                background-color: $gray
+    &-stat
+        margin-top: 30px
+        &__item
+            display: flex
+            flex-direction: row
+            justify-content: space-between
+            align-items: center
+            flex-wrap: wrap
+        p
+            position: relative
+            font-weight: normal
+            padding: 20px 0 8px 5px
+            &::before
+                content: ""
+                width: 2px
+                height: 90%
+                display: block
+                position: absolute
+                bottom: 0
+                left: calc(-15 * (100vw/1170))
+                background-color: $green
+        &__num
+            h2
+                font-size: 45px
+                color: $green
+                font-weight: 700
+            h4
+                font-size: 14px
+
+//CONTACT>>>
+
+.contact
+    padding: 60px 0 85px 0
+    &__content
+        p
+            margin: 24px 0 35px
+        button
+            background-color: $gray
+            padding: 15px 35px
+            border-radius: 28px
+            font-size: 15px
+            color: #fff
+            margin: 0 1vw 10px 0
+
+//BLOG
+
+.blog
+    background-color: #fafafa
+    padding: 90px 0
+    &-intro
+        color: #282828
+        h2
+            font-size: 35px
+            font-weight: 500
+        p
+            margin: 30px 20px 90px 20px
+    &-content
+        &__main
+            .blog-content__date
+                width: 70px
+                height: 60px
+                font-size: 18px
+            .blog-content__text
+                padding: 20px
+                padding-bottom: 55px
+                h4
+                    color: $green
+        &__item
+            position: relative
+            background-color: #fff
+            box-shadow: 0 0 26px 1px rgba(0, 0, 0, 0.15)
+        &__date
+            width: 45px
+            height: 41px
+            background-color: $green
+            position: absolute
+            top: 0
+            left: 0
+            color: #fff
+            font-size: 14px
+            text-align: center
+            font-weight: 500
+        &__text
+            padding: 20px 6% 20px 5%
+            h4
+                font-size: 22px
+                font-size: calc(12px + 5 * (100vw/1170))
+                font-weight: 500
+                line-height: calc(12px + 10 * (100vw/1170))
+                margin-bottom: 30px
+            p
+                color: #484949
+                font-size: calc(10px + 4 * (100vw/1170))
+                font-weight: 700
+                margin: 0
+
+//FOOTER
+
+.footer
+    &-main
+        padding: 90px 0
+    &-item
+        h4
+            font-weight: 700
+            margin-bottom: 30px
+        &__link
+            display: block
+            font-size: 17px
+        &:first-child
+            img
+                margin-bottom: 25px
+            p
+                font-size: 14px
+                line-height: 24px
+                padding-right: 2vw
+        &:nth-child(3)
+            p
+                text-decoration-line: underline
+                font-weight: 500
+                line-height: 27px
+            a
+                color: $green
+        &:last-child
+            img
+                margin-top: 10px
+    &-bottom
+        height: 80px
+        background-color: #b4ebe2
+        p
+            margin-bottom: 0
